--- a/web.html
+++ b/web.html
@@ -1,11 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Health Era</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+<header>
+    <img src="./imagenes/Logo.png" class="logo" alt="logo">
+    <img src="./imagenes/Nav Bar.png" class="menu" alt="menu">
+  </header>
+
 <body>
-    
+
+  <section id="primera" class="hero-images">
+    <div>
+    <div class="PrimeraSection">
+    <h1>The dawn of a new era in health is here</h1>
+    <p>Learn lorem dolor sit amet consectetur. Quam ut consequat et ac diam lacus platea vel vel volutpat facilisis.</p>
+    <button class="join-now"><img src="./imagenes/Join now.png" alt="boton"></button>
+    </div>
+
+    <div class="image-izquierda">
+      <img src="./imagenes/jared-rice-xce530fBHrk-unsplash 1.png" alt="katherine-hanlon-mod2s3-qFOc-unsplash">
+      <img src="./imagenes/katherine-hanlon-mod2s3-qFOc-unsplash 1.png" alt="katherine-hanlon-mod2s3-qFOc-unsplash">
+    </div>
+    </div>
+  </section>
+
+
+  <section id="segunda" class="wellbeing">
+    <h2>Wellbeing is welldoing</h2>
+    <div class="icons">
+      <div class="icon-block">
+        <div class="image-izquierda">
+            <img src="./imagenes/Group 1.png" alt="Group 1">
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur. Quam ut consequat ac diam lacus platea vel velit.</p>
+      </div>
+      <div class="icon-block">
+        <div class="image-izquierda">
+            <img src="./imagenes/Group 2.png" alt="Group 2">
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur. Quam ut consequat ac diam lacus platea vel velit.</p>
+      </div>
+      <div class="">
+        <img src="./imagenes/Group section 2.png" alt="Group section 2">
+      </div>
+    </div>
+  </section>
+
+
+  <section id="tercera" class="fresh-produce">
+    <div class="content">
+        <div class="">
+            <img src="./imagenes/Group 15.png" alt="Group 15">
+        </div>
+
+    <div>
+      <h2>Fresh organic produce</h2>
+      <p>Lorem ipsum dolor sit amet consectetur. Quam ut consequat ac diam lacus platea vel velit ut facilisis erat integer integer arcu nec vulputate consequat.</p>
+      <ul class="list">
+        <li>
+          <img src="./imagenes/Icon.png" alt="Icono 1">
+          <span>Lorem ipsum dolor sit amet consectetur. Quam ut consequat ac diam lacus platea.</span>
+        </li>
+        <li>
+          <img src="./imagenes/Icon.png" alt="Icono 2">
+          <span>Lorem ipsum dolor sit amet consectetur. Quam ut consequat ac diam lacus platea.</span>
+        </li>
+        <li>
+            <img src="./imagenes/Icon.png" alt="Icono 3">
+            <span>Lorem ipsum dolor sit amet consectetur. Quam ut consequat ac diam lacus platea.</span>
+          </li>
+      </ul>
+    </div>
+    </div>
+  </section>
+
+
+  <footer>
+    <div class="footer-content">
+    <div class="footeraling">
+      <img src="./imagenes/Logo 2.png" alt="logo">
+      <img src="./imagenes/Frame 2.png" alt="contact">
+    </div>
+      <div class="footeralingdos">
+        <img src="./imagenes/Nav Bar 2.png" alt="">
+    </div>
+    </div>
+  </footer>
 </body>
 </html>
